Remove provider-facing event IDs and evidence contract